<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/dear_diary"
        android:textSize="24sp"
        android:layout_marginStart="18dp"
        android:textColor="@color/dark_gray"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/btn_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_calendar_month_24"
        android:layout_margin="18dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/button_for_upcoming_holidays" />

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        tools:ignore="RelativeOverlap" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEntries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        tools:listitem="@layout/entry_item"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/lilac"
        android:contentDescription="@string/button_to_add_an_entry" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:visibility="gone"/>
</RelativeLayout>